# 2022_td_rusty_hackathon

./: README.md
backend/: .env  Cargo.toml  cards.db  configuration.yaml
backend/configuration/: base.yaml
backend/migrations/: 20221013181718_create_tables.sql
backend/src/: config.rs  lib.rs  main.rs  startup.rs
backend/src/domain/: card_answer.rs  card_question.rs  mod.rs  new_card.rs
backend/src/routes/: cards.rs  categories.rs  mod.rs
backend/tests/: health_check.rs
backend/tests/api/: cards.rs  categories.rs  health_check.rs  helpers.rs  main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: category.rs  counter.rs  fetch_ex.rs  home.rs  mod.rs
types/: Cargo.toml
types/src/: lib.rs
