[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
axum = "0.5.16"
axum-extra = { version = "0.3.7", features = ["spa"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
time = "0.3.15"
tower = "0.4.13"
