[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hackathon_backend"

[dev-dependencies]
reqwest = "0.11.12"

[dependencies]
types = { path = "../types" }
axum = "0.6"
axum-extra = { version = "0.4", features = ["spa"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
hyper = { version = "0.14.20", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
time = "0.3.15"
uuid = { version = "1.2.2", features = ["v4"] }
once_cell = "1.16.0"
config = "0.13.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
